--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
   - docker run -e CI=true 050605/react-docker npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "react-docker"
+  env: "React-docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-975758072381"
+  bucket_path: "react-docker"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+
